--- a/case-study-pages/brewers-brew-kit.html
+++ b/case-study-pages/brewers-brew-kit.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title> Brewers Brew Kit - Portfolio of Turner James Zajac </title>
+  <title> DRG - Portfolio of Turner James Zajac </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -60,7 +60,7 @@
       <div class="op-col-start-2 op-col-end-11 headline-container border-top">
         <div class="hero-content-wrapper">
           <div class="headline-content-container">
-            <h2> Brewers Brew Kit<span class="label-text"> design & development</span> </h2>
+            <h2> Diversified Restaurant Group <span class="label-text"> design </span> </h2>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
         <div class="marquee">
             <div class="inner">
               <a href="border-foods.html"> 
-                <h2>Next Project: Border Foods</h2>
+                <h2>Next Project: Gather Roast Coffee</h2>
               </a>
           </div>
           </div>
