--- a/case-study-pages/malley-design.html
+++ b/case-study-pages/malley-design.html
@@ -173,7 +173,7 @@
           <div class="marquee">
               <div class="inner">
                 <a href="gather-roast.html"> 
-                  <h2>Next Project: Gather Roast Coffee</h2>
+                  <h2>Next Project: DRG</h2>
                 </a>
             </div>
           </div> 
