Update DRG title

--- a/case-study-pages/brewers-brew-kit.html
+++ b/case-study-pages/brewers-brew-kit.html
@@ -60,7 +60,7 @@
       <div class="op-col-start-2 op-col-end-11 headline-container border-top">
         <div class="hero-content-wrapper">
           <div class="headline-content-container">
-            <h2> Diversified Restaurant Group <span class="label-text"> design </span> </h2>
+            <h2> DRG <span class="label-text"> design </span> </h2>
           </div>
         </div>
       </div>
