OP Case Study updates

--- a/case-study-pages/one-protection.html
+++ b/case-study-pages/one-protection.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title> The Hangar Case Study - Portfolio of Turner James Zajac </title>
+  <title> One Protection - Portfolio of Turner James Zajac </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -82,7 +82,7 @@
             </div>
             <div class="developer-con">
               <h6> developer </h6>
-              <h4> <a class="sliding-u-l-r-l" href="#" target="_blank" >  </a> </h4>
+              <h4> <a class="sliding-u-l-r-l" href="https://www.emergentsoftware.net/" target="_blank">   Emergent Software </a> </h4>
             </div>
             <div class="live-site-con">
               <div class="container">
@@ -104,14 +104,14 @@
       <!-- image one -->
       <div class="one op-col-start-1 op-col-end-8 intro-image">
         <div class="image-wrapper margin-top--xl">
-            <img class="img" src="../img/case-study-images/one-protectioin/OP-Case-Study-Brand-1.jpeg">
+            <img class="img" src="../img/case-study-images/one-protectioin/OP-Case-Study-Brand-1.jpg">
         </div>
       </div>
 
       <!-- paragraph -->
       <div class="paragraph op-col-start-3 op-col-end-7 margin-top--lg">
-        <h4>The Hangar is a vibrant food and music venue featuring craft beer flights, tasty bites and live music that can serve up to 10,000 people daily. Fun Biz Conessions came to Malley to brand this new experience at the Minnesota State Fair, and then the following year wanted help bringing the experience to a new level. This time in the addition of a website that would change what it meant to be a fair vendor. The main goal was to ease the experience for fairgoers with maps, a stage list, acess to menus and also a history page to host the history of this famous airplane hangar. </h4>
-        <h4> Branding done by <a href="https://codypaulson.com/" class="link" target="_blank">  Cody Paulson</a>, creative direction by Bryan Malley. </h4>
+        <h4>The founders of OneProtection have a bold vision: to change the world of income protection insurance. Bold vision calls for a bold visual identity and digital presence. Crafting a website and app to help educate, demonstrate and bring clarity to this critical area of financial planning. With a mantra of "simple but powerful," we focused on planetary and atmospheric layers to symbolize protection, hopeful horizons and the layers of the system itself.
+        </h4>
       </div>
 
       <!-- image two -->
@@ -125,31 +125,44 @@
       <!-- image four -->
       <div class="one op-col-start-4 op-col-end-11">
         <div class="image-wrapper margin-top--med">
-            <img class="img" src="../img/case-study-images/one-protectioin/OP_case_study_web_img02@2x.jpg">
+            <img class="img" src="../img/case-study-images/one-protectioin/OP_image_two.jpg">
         </div>
       </div>
 
       <!-- image five -->
       <div class="one op-col-start-4 op-col-end-11">
         <div class="image-wrapper margin-top--med">
-            <img class="img" src="../img/case-study-images/">
+            <img class="img" src="../img/case-study-images/one-protectioin/OP_image_three.jpg">
         </div>
       </div>
 
       <!-- image six -->
       <div class="one op-col-start-4 op-col-end-11">
         <div class="image-wrapper margin-top--med">
-            <img class="img" src="../img/case-study-images/one-protectioin/OP_case_study_web_img04@2x.jpg">
+            <img class="img" src="../img/case-study-images/one-protectioin/OP_image_four.jpg">
         </div>
       </div>
 
       <!-- image seven -->
       <div class="one op-col-start-4 op-col-end-11">
         <div class="image-wrapper margin-top--med">
-            <img class="img" src="../img/case-study-images/one-protectioin/OP_case_study_web_img05@2x.jpg">
+            <img class="img" src="../img/case-study-images/one-protectioin/OP_image_five.jpg">
         </div>
       </div>
 
+      <!-- image eight -->
+        <div class="one op-col-start-4 op-col-end-11">
+          <div class="image-wrapper margin-top--med">
+            <img class="img" src="../img/case-study-images/one-protectioin/OP_image_six.jpg">
+        </div>
+      </div>
+
+      <!-- image nine -->
+      <div class="one op-col-start-4 op-col-end-11">
+        <div class="image-wrapper margin-top--med">
+          <img class="img" src="../img/case-study-images/one-protectioin/OP_image_mobile.png">
+      </div>
+    </div>
 
 
   </div>
