--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <h2 class="wrapped-item outlined"> The Hangar MN </h2>
           </div>
 
-          <div class="project-link-container project-op inactive-item"> 
+          <div class="project-link-container project-op"> 
             <div class="title-wipe"></div>
               <h2 class="wrapped-item top-item"> One Protection <span class="label-text-xl"> Design </span> </h2>
               <h2 class="wrapped-item outlined middle-top-item"> One Protection </h2>
