fixed issue with inactive project.

--- a/index.html
+++ b/index.html
@@ -123,12 +123,10 @@
             <h2 class="wrapped-item outlined"> Malley.Design</h2>
           </div>
 
-          <div class="project-link-container  project-two inactive-item">
+          <div class="project-link-container project-two">
             <div class="title-wipe"></div>
-            <h2 class="wrapped-item top-item"> Diversified Restaurant Group <span class="label-text-xl"> design  </span> </h2>
-            <h2 class="wrapped-item outlined middle-top-item"> Diversified Restaurant Group </h2>
-            <h2 class="wrapped-item outlined middle-item"> Diversified Restaurant Group </h2>
-            <h2 class="wrapped-item outlined"> Diversified Restaurant Group</h2>
+            <h2 class="wrapped-item top-item inactive-item"> DRG <span class="label-text-xl"> design  </span> </h2>
+
           </div>
 
           <div class="project-link-container  project-gr">
