--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <div class="op-col-start-4 op-col-end-8 about-container">
       <div class="about-paragraph-container">
-        <h5>Currently working at <a href="https://malley.design/" target="_blank" class="link"> Malley.Design </a> in Northeast, Minneapolis. My work focuses on solving complicated problems through simple design experiences, along with making below average puns for clients of all industries. If you're interested in working with me or just want to grab a beer, <a href="mailto:turnerzajac@gmail.com" class="link"> let me know. </a> </h5>
+        <h5>Currently working at <a href="https://www.council.inc/" target="_blank" class="link"> Council Design </a>. My work focuses on solving complicated problems through simple design experiences, along with making below average puns for clients of all industries. If you're interested in working with me or just want to grab a beer, <a href="mailto:turnerzajac@gmail.com" class="link"> let me know. </a> </h5>
       </div>
     </div>
 
